--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -146,4 +146,83 @@ table {
 
 button {
   cursor: pointer;
+}
+
+.container {
+  max-width: 1760px;
+  width: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 1800px) {
+  .container {
+    width: 91.67%;
+  }
+}
+
+header {
+  height: 150px;
+  background-color: #162974;
+}
+header .header_wrapper {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .header_wrapper .navigation nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  -moz-column-gap: 65px;
+       column-gap: 65px;
+}
+@media (max-width: 768px) {
+  header .header_wrapper .navigation nav ul {
+    -moz-column-gap: 48px;
+         column-gap: 48px;
+  }
+}
+header .header_wrapper .navigation nav li a {
+  /* font-family: */
+  font-weight: 800;
+  font-size: 32px;
+  line-height: 38.4px;
+  color: #f5f5f5;
+}
+@media (max-width: 1200px) {
+  header .header_wrapper .navigation nav li a {
+    font-size: 20px;
+  }
+}
+@media (max-width: 768px) {
+  header .header_wrapper .navigation nav li a {
+    font-size: 14px;
+    line-height: 16.3px;
+  }
+}
+@media (max-width: 600px) {
+  header .header_wrapper .navigation {
+    display: none;
+  }
+}
+header .header_wrapper .burger_menu {
+  width: 18px;
+  height: 15px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  display: none;
+}
+@media (max-width: 600px) {
+  header .header_wrapper .burger_menu {
+    display: flex;
+  }
+}
+header .header_wrapper .burger_menu div {
+  width: 100%;
+  height: 1.25px;
+  border-radius: 2px;
+  background-color: #ffffff;
 }/*# sourceMappingURL=global.css.map */
