--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -149,7 +149,7 @@ button {
 }
 
 .container {
-  max-width: 1760px;
+  max-width: 1680px;
   width: 100%;
   margin: 0 auto;
 }
@@ -157,6 +157,152 @@ button {
   .container {
     width: 91.67%;
   }
+}
+
+.main-content-wrapper {
+  max-width: 1680px;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 64px;
+}
+@media (max-width: 1800px) {
+  .main-content-wrapper {
+    width: 91.67%;
+  }
+}
+.main-content-wrapper .search-sort-div {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-content-wrapper .search-sort-div .search-div {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+}
+.main-content-wrapper .search-sort-div .search-div input {
+  width: 361px;
+  height: 62px;
+  border-radius: 14px;
+  padding: 14px 15px 14px 60px;
+  border: 1.5px solid #000000;
+  font-size: 18px;
+}
+.main-content-wrapper .search-sort-div .search-div input:focus {
+  outline: none;
+}
+.main-content-wrapper .search-sort-div .search-div img {
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+.main-content-wrapper .search-sort-div .sort-div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.main-content-wrapper .search-sort-div .sort-div p {
+  font-size: 18px;
+}
+.main-content-wrapper .search-sort-div .sort-div img {
+  cursor: pointer;
+}
+.main-content-wrapper .filter-books-wrapper {
+  display: flex;
+  flex-direction: row;
+  margin-top: 35px;
+}
+.main-content-wrapper .filter-section {
+  width: 100%;
+  max-width: 360px;
+  margin-right: 90px;
+}
+.main-content-wrapper .books-section {
+  width: 100%;
+  max-width: 1230px;
+  background-color: white;
+  padding: 24px 29px;
+  border-radius: 10px;
+  display: grid;
+  grid-template-columns: repeat(4, 275px);
+  -moz-column-gap: 24px;
+       column-gap: 24px;
+  row-gap: 34px;
+}
+.main-content-wrapper .card .book-cover {
+  height: 420px;
+}
+.main-content-wrapper .card .book-info {
+  width: 100%;
+  padding: 16px;
+  margin-top: -3px;
+  border: 1px solid #c2c2c2;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.main-content-wrapper .card .book-info h2 {
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  margin-bottom: 20px;
+}
+.main-content-wrapper .card .book-info p {
+  font-size: 16px;
+  line-height: 19.2px;
+  font-weight: 400;
+}
+.main-content-wrapper .card .book-info .book-additional-info {
+  margin-top: 23px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-content-wrapper .card .book-info .book-additional-info .book-views {
+  display: flex;
+  flex-direction: row;
+}
+.main-content-wrapper .card .book-info .book-additional-info .book-views p {
+  color: #13297f;
+  font-weight: 700;
+  margin-left: 4px;
+}
+.main-content-wrapper .pagination-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin: 124px 0 112px;
+}
+.main-content-wrapper .pagination-container .pagination-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.main-content-wrapper .pagination-container .pagination-wrapper * {
+  cursor: pointer;
+}
+.main-content-wrapper .pagination-container .pagination-wrapper p {
+  font-size: 24px;
+  font-weight: 500;
+  color: #022859;
+  margin-right: 10px;
+}
+.main-content-wrapper .pagination-container .pagination-wrapper p.active {
+  background-color: #064aa2;
+  color: white;
+  border-radius: 8px;
+  padding: 5px 10px;
+}
+.main-content-wrapper .pagination-container .pagination-wrapper img {
+  margin-right: 5px;
+}
+.main-content-wrapper .pagination-container .pagination-wrapper img:last-child {
+  rotate: 180deg;
+  margin-right: 0;
 }
 
 header {
@@ -193,7 +339,7 @@ header .header_wrapper .header_components {
 }
 header .header_wrapper .header_components .logo {
   height: 100%;
-  width: 13.83%;
+  width: 11.83%;
 }
 @media (max-width: 768px) {
   header .header_wrapper .header_components .logo {
@@ -222,7 +368,7 @@ header .header_wrapper .header_components .navigation nav ul {
 header .header_wrapper .header_components .navigation nav li a {
   /* font-family: */
   font-weight: 800;
-  font-size: 32px;
+  font-size: 28px;
   line-height: 38.4px;
   color: #f5f5f5;
 }
