--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -233,10 +233,10 @@ button {
        column-gap: 24px;
   row-gap: 34px;
 }
-.main-content-wrapper .card .book-cover {
+.main-content-wrapper .books-section .card .book-cover {
   height: 420px;
 }
-.main-content-wrapper .card .book-info {
+.main-content-wrapper .books-section .card .book-info {
   width: 100%;
   padding: 16px;
   margin-top: -3px;
@@ -244,29 +244,29 @@ button {
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-.main-content-wrapper .card .book-info h2 {
+.main-content-wrapper .books-section .card .book-info h2 {
   font-size: 20px;
   font-weight: 500;
   line-height: 24px;
   margin-bottom: 20px;
 }
-.main-content-wrapper .card .book-info p {
+.main-content-wrapper .books-section .card .book-info p {
   font-size: 16px;
   line-height: 19.2px;
   font-weight: 400;
 }
-.main-content-wrapper .card .book-info .book-additional-info {
+.main-content-wrapper .books-section .card .book-info .book-additional-info {
   margin-top: 23px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-.main-content-wrapper .card .book-info .book-additional-info .book-views {
+.main-content-wrapper .books-section .card .book-info .book-additional-info .book-views {
   display: flex;
   flex-direction: row;
 }
-.main-content-wrapper .card .book-info .book-additional-info .book-views p {
+.main-content-wrapper .books-section .card .book-info .book-additional-info .book-views p {
   color: #13297f;
   font-weight: 700;
   margin-left: 4px;
