--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -189,3 +189,28 @@
     }
   }
 }
+
+.landing-photo-wrapper {
+  width: 100%;
+  height: 294px;
+  overflow: hidden;
+  position: relative;
+
+  .landing-photo {
+    width: 100%;
+    height: 294px;
+    object-fit: cover;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #162974;
+    opacity: 0.4;
+    pointer-events: none;
+  }
+}
