--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -72,82 +72,169 @@
     flex-direction: row;
     justify-content: space-between;
     margin-top: 35px;
-  }
 
-  .filter-section {
-    width: 360px;
-    margin-right: 10px;
-  }
+    .filter-section {
+      width: 360px;
+      margin-right: 10px;
 
-  .books-section {
-    max-width: 1230px;
-    flex: 1;
-    background-color: white;
-    padding: 24px 29px;
-    border-radius: 10px;
-    display: grid;
-    align-items: center;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 24px;
-    row-gap: 34px;
-
-    @media (max-width: 1760px) {
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    @media (max-width: 1440px) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @media (max-width: 1110px) {
-      grid-template-columns: repeat(1, 1fr);
-    }
-
-    .card {
-      width: fit-content;
-      margin: 0 auto;
-
-      .book-cover {
-        height: 420px;
+      .filter-clear-button {
+        width: 100%;
+        height: 58px;
+        border: 1px solid $dark-blue-color;
+        border-radius: 10px;
+        background-color: white;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 21.6px;
+        color: $dark-blue-color;
       }
 
-      .book-info {
-        width: 100%;
-        max-width: 275px;
-        padding: 16px;
-        margin-top: -3px;
-        border: 1px solid #c2c2c2;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
+      .dropdown-section {
+        margin-top: 32px;
 
-        h2 {
-          font-size: 20px;
-          font-weight: 500;
-          line-height: 24px;
-          margin-bottom: 20px;
-        }
-
-        p {
-          font-size: 16px;
-          line-height: 19.2px;
-          font-weight: 400;
-        }
-
-        .book-additional-info {
-          margin-top: 23px;
-          display: flex;
-          flex-direction: row;
-          justify-content: space-between;
-          align-items: center;
-
-          .book-views {
+        .dropdown-section-wrapper {
+          .dropdown-head {
             display: flex;
             flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            font-size: 24px;
+            font-weight: 200px;
+            line-height: 28.8px;
+            cursor: pointer;
 
-            p {
-              color: #13297f;
-              font-weight: 700;
-              margin-left: 4px;
+            img {
+              cursor: pointer;
+
+              &.rotate {
+                transform: rotate(180deg);
+              }
+            }
+          }
+
+          .dropdown-container {
+            height: 0;
+            overflow: hidden;
+            transition: height 0.3s ease-in-out;
+
+            .dropdown {
+              display: flex;
+              flex-direction: column;
+
+              .dropdown-line {
+                width: 100%;
+                height: 1px;
+                border: 1px solid #d5d5d5;
+                border-radius: 5px;
+                color: #d5d5d5;
+                margin: 18px 0;
+              }
+
+              label {
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                justify-content: space-between;
+                cursor: pointer;
+                font-size: 20px;
+                font-weight: 400;
+                line-height: 24px;
+                position: relative;
+
+                &:not(:last-child) {
+                  margin-bottom: 20px;
+                }
+
+                input {
+                  width: 22px;
+                  height: 22px;
+                  cursor: pointer;
+                }
+              }
+            }
+
+            &.active {
+              height: 194px;
+            }
+          }
+
+          &:not(:last-child) {
+            margin-bottom: 20px;
+          }
+        }
+      }
+    }
+
+    .books-section {
+      max-width: 1230px;
+      flex: 1;
+      background-color: white;
+      padding: 24px 29px;
+      border-radius: 10px;
+      display: grid;
+      align-items: center;
+      grid-template-columns: repeat(4, 1fr);
+      column-gap: 24px;
+      row-gap: 34px;
+
+      @media (max-width: 1760px) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      @media (max-width: 1440px) {
+        grid-template-columns: repeat(2, 1fr);
+      }
+
+      @media (max-width: 1110px) {
+        grid-template-columns: repeat(1, 1fr);
+      }
+
+      .card {
+        width: fit-content;
+        margin: 0 auto;
+
+        .book-cover {
+          height: 420px;
+        }
+
+        .book-info {
+          width: 100%;
+          max-width: 275px;
+          padding: 16px;
+          margin-top: -3px;
+          border: 1px solid #c2c2c2;
+          border-bottom-left-radius: 10px;
+          border-bottom-right-radius: 10px;
+
+          h2 {
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 24px;
+            margin-bottom: 20px;
+          }
+
+          p {
+            font-size: 16px;
+            line-height: 19.2px;
+            font-weight: 400;
+          }
+
+          .book-additional-info {
+            margin-top: 23px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+
+            .book-views {
+              display: flex;
+              flex-direction: row;
+
+              p {
+                color: #13297f;
+                font-weight: 700;
+                margin-left: 4px;
+              }
             }
           }
         }
@@ -173,7 +260,7 @@
       p {
         font-size: 24px;
         font-weight: 500;
-        color: #022859;
+        color: $dark-blue-color;
         padding: 5px 10px;
         border-radius: 8px;
 
