--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -283,9 +283,41 @@ button {
   margin-bottom: 20px;
 }
 .main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input {
+  -moz-appearance: none;
+       appearance: none;
+  -webkit-appearance: none;
   width: 22px;
   height: 22px;
   cursor: pointer;
+  border: 2px solid #515151;
+  border-radius: 5px;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input:checked::before {
+  background-color: #022859;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input:checked {
+  background-color: #022859;
+  border: 2px solid #022859;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input:checked::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 6px;
+  height: 12px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: translate(-50%, -60%) rotate(45deg);
 }
 .main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container.active {
   height: 194px;
