--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -145,14 +145,14 @@
                   margin-bottom: 20px;
                 }
 
-                input {
+                input[type="checkbox"] {
                   appearance: none;
                   -webkit-appearance: none;
                   width: 22px;
                   height: 22px;
                   cursor: pointer;
                   border: 2px solid #515151;
-                  border-radius: 5px;
+                  border-radius: 3px;
                   position: relative;
                   display: inline-block;
                   vertical-align: middle;
@@ -178,23 +178,109 @@
                     position: absolute;
                     top: 50%;
                     left: 50%;
-                    width: 6px;
-                    height: 12px;
-                    border: solid white;
-                    border-width: 0 2px 2px 0;
-                    transform: translate(-50%, -60%) rotate(45deg);
+                    width: 8px;
+                    height: 14px;
+                    border: solid #ffffff;
+                    border-width: 0 2.5px 2.5px 0;
+                    transform: translate(-40%, -60%) rotate(45deg);
                   }
                 }
               }
             }
 
             &.active {
-              height: 194px;
+              height: 184px;
+            }
+          }
+
+          .publish-date {
+            height: 115px;
+
+            .dropdown-line {
+              width: 100%;
+              height: 1px;
+              border: 1px solid #d5d5d5;
+              border-radius: 5px;
+              color: #d5d5d5;
+              margin: 25px 0;
+            }
+
+            .date-wrapper {
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              justify-content: space-between;
+
+              img {
+                rotate: 270deg;
+              }
+
+              // input {
+              //   width: 145px;
+              //   height: 54px;
+              //   border: 1px solid black;
+              //   border-radius: 15px;
+              // }
+
+              .date-input-container {
+                display: flex;
+                align-items: center;
+                position: relative;
+                border: 1px solid #000;
+                border-radius: 15px;
+                width: 145px;
+                height: 54px;
+                padding: 17px 16px;
+                cursor: pointer;
+
+                label {
+                  display: flex;
+                  flex-direction: row;
+                  align-items: center;
+                  justify-content: center;
+
+                  .icon {
+                    margin-right: 10px;
+                    rotate: 0deg;
+                  }
+
+                  p {
+                    font-size: 14px;
+                    font-weight: 400;
+                    line-height: 19.2px;
+                    color: #7d7d7d;
+                  }
+
+                  input[type="date"] {
+                    position: absolute;
+                    border: none;
+                    outline: none;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    opacity: 0;
+                    z-index: 10;
+                    // width: 10px;
+                    cursor: pointer;
+
+                    &::-webkit-inner-spin-button,
+                    &::-webkit-clear-button {
+                      display: none;
+                    }
+
+                    &::-webkit-calendar-picker-indicator {
+                      opacity: 0;
+                      cursor: pointer;
+                    }
+                  }
+                }
+              }
             }
           }
 
           &:not(:last-child) {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
           }
         }
       }
