--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -282,7 +282,7 @@ button {
 .main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label:not(:last-child) {
   margin-bottom: 20px;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input {
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input[type=checkbox] {
   -moz-appearance: none;
        appearance: none;
   -webkit-appearance: none;
@@ -290,40 +290,106 @@ button {
   height: 22px;
   cursor: pointer;
   border: 2px solid #515151;
-  border-radius: 5px;
+  border-radius: 3px;
   position: relative;
   display: inline-block;
   vertical-align: middle;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input::before {
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input[type=checkbox]::before {
   content: "";
   display: block;
   width: 100%;
   height: 100%;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input:checked::before {
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input[type=checkbox]:checked::before {
   background-color: #022859;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input:checked {
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input[type=checkbox]:checked {
   background-color: #022859;
   border: 2px solid #022859;
 }
-.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input:checked::after {
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container .dropdown label input[type=checkbox]:checked::after {
   content: "";
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 6px;
-  height: 12px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  transform: translate(-50%, -60%) rotate(45deg);
+  width: 8px;
+  height: 14px;
+  border: solid #ffffff;
+  border-width: 0 2.5px 2.5px 0;
+  transform: translate(-40%, -60%) rotate(45deg);
 }
 .main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .dropdown-container.active {
-  height: 194px;
+  height: 184px;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date {
+  height: 115px;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .dropdown-line {
+  width: 100%;
+  height: 1px;
+  border: 1px solid #d5d5d5;
+  border-radius: 5px;
+  color: #d5d5d5;
+  margin: 25px 0;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper img {
+  rotate: 270deg;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container {
+  display: flex;
+  align-items: center;
+  position: relative;
+  border: 1px solid #000;
+  border-radius: 15px;
+  width: 145px;
+  height: 54px;
+  padding: 17px 16px;
+  cursor: pointer;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label .icon {
+  margin-right: 10px;
+  rotate: 0deg;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 19.2px;
+  color: #7d7d7d;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date] {
+  position: absolute;
+  border: none;
+  outline: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  z-index: 10;
+  cursor: pointer;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date]::-webkit-inner-spin-button, .main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date]::-webkit-clear-button {
+  display: none;
+}
+.main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper .publish-date .date-wrapper .date-input-container label input[type=date]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+  cursor: pointer;
 }
 .main-content-wrapper .filter-books-wrapper .filter-section .dropdown-section .dropdown-section-wrapper:not(:last-child) {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 .main-content-wrapper .filter-books-wrapper .books-section {
   max-width: 1230px;
