--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -11,3 +11,70 @@
   font-weight: $fw;
   line-height: normal;
 }
+
+@mixin Bookbutton(
+  $bg-color: #203a9c,
+  $color: #fff,
+  $padding: 32px 116px,
+  $border-radius: 20px,
+  $border: none,
+  $font-size: 24px,
+  $font-weight: 500, 
+  // $hover-bg-color: black,
+  // $active-bg-color:
+) {
+  background-color: $bg-color;
+  color: $color;
+  padding: $padding;
+  border-radius: $border-radius;
+  font-size: $font-size;
+  font-weight: $font-weight;
+  border: $border;
+  cursor: pointer;
+
+  // &:hover {
+  //   background-color: $hover-bg-color;
+  // }
+
+  // &:active {
+  //   background-color: $active-bg-color;
+  // }
+}
+
+
+@mixin chooseButton(
+  $bg-color: transparent,
+  $color: #000,
+  $padding: 0 0 7px,
+  $border-radius: 0,
+  $border: none,
+  $font: 'FiraGO',
+  $font-size: 20px,
+  $font-weight: 500, 
+  // $hover-bg-color: black,
+  $active-color: #112f91
+) {
+  background-color: $bg-color;
+  color: $color;
+  padding: $padding;
+  border: $border;
+  border-radius: $border-radius;
+  font-family: $font;
+  font-size: $font-size;
+  font-weight: $font-weight;
+  border: $border;
+  cursor: pointer;
+
+  // &:hover {
+  //   background-color: $hover-bg-color;
+  // }
+
+  &:active {
+    color: $active-color;
+  }
+
+  &:focus {
+    color: $active-color;
+    border-bottom: $active-color solid 3px;
+  }
+}
