--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -1,7 +1,12 @@
+
+//font
+$font-family: 'FiraGO', sans-serif;
+
 // colors
 $header-background: #162974;
 $nav-element-color: #f5f5f5;
 $dark-blue-color: #022859;
+
 
 // resolution
 $desktop-large-screen: 1200px;
