feature/book-detail-page
adding similar books section

--- a/view/book-details.html
+++ b/view/book-details.html
@@ -129,6 +129,83 @@
 
     </section>
 
+    <section class="similar-books">
+      <h3>
+        მსგავსი წიგნები
+      </h3>
+      <div class="cards-wrapper">
+        <div class="card">
+          <img src="../assets/marx.png" alt="author photo">
+          <div>
+            <h4>კარლ მარქსი</h4>
+            <p>გამომცემლობა</p>
+            <div>
+              <span>2024</span>
+              <div>
+                <img src="../assets/mdi_eye.svg" alt="seen icon">
+                <span>29</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../assets/jung.png" alt="author photo">
+          <div>
+            <h4>კარლ გუსტავ იუნგი</h4>
+            <p>გამომცემლობა</p>
+            <div>
+              <span>2024</span>
+              <div>
+                <img src="../assets/mdi_eye.svg" alt="seen icon">
+                <span>29</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../assets/hobbes.png" alt="author photo">
+          <div>
+            <h4>თომას ჰობსი</h4>
+            <p>გამომცემლობა</p>
+            <div>
+              <span>2024</span>
+              <div>
+                <img src="../assets/mdi_eye.svg" alt="seen icon">
+                <span>29</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../assets/freud.png" alt="author photo">
+          <div>
+            <h4>ზიგმუნდ ფროიდი</h4>
+            <p>გამომცემლობა</p>
+            <div>
+              <span>2024</span>
+              <div>
+                <img src="../assets/mdi_eye.svg" alt="seen icon">
+                <span>29</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img src="../assets/Schrödinger.png" alt="author photo">
+          <div>
+            <h4>ერვინ შროდინგერი</h4>
+            <p>გამომცემლობა</p>
+            <div>
+              <span>2024</span>
+              <div>
+                <img src="../assets/mdi_eye.svg" alt="seen icon">
+                <span>29</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   </main>
 
