--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -926,4 +926,77 @@ header .header_wrapper .burger_menu .line {
 .book-main .book-container .info-wrapper .open {
   max-height: 100%;
   opacity: 1;
+}
+.book-main .similar-books {
+  margin-bottom: 179px;
+  padding: 36px 6.8%;
+  background-color: #fff;
+}
+.book-main .similar-books h3 {
+  margin-bottom: 48px;
+  font-family: "FiraGO", sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  color: #000;
+}
+.book-main .similar-books .cards-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.book-main .similar-books .cards-wrapper .card {
+  border-radius: 10px;
+  border: solid 1px #c2c2c2;
+  background-color: #fff;
+}
+.book-main .similar-books .cards-wrapper .card img {
+  width: 275px;
+  height: 420px;
+}
+.book-main .similar-books .cards-wrapper .card div {
+  padding: 16px;
+}
+.book-main .similar-books .cards-wrapper .card div h4 {
+  margin-bottom: 40px;
+  font-family: "FiraGO", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  color: #000;
+}
+.book-main .similar-books .cards-wrapper .card div p {
+  margin-bottom: 22.5px;
+  font-family: "FiraGO", sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  color: #000;
+}
+.book-main .similar-books .cards-wrapper .card div div {
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.book-main .similar-books .cards-wrapper .card div div span {
+  font-family: "FiraGO", sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  color: #000;
+}
+.book-main .similar-books .cards-wrapper .card div div div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5;
+}
+.book-main .similar-books .cards-wrapper .card div div div img {
+  width: 22px;
+  height: 15px;
+}
+.book-main .similar-books .cards-wrapper .card div div div span {
+  font-family: "FiraGO", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  color: #13297f;
 }/*# sourceMappingURL=global.css.map */
