--- a/styles/page/_book-details.scss
+++ b/styles/page/_book-details.scss
@@ -153,4 +153,90 @@
     
         }
     }
+
+    .similar-books{
+        margin-bottom: 179px;
+        padding:  36px 6.8%;
+        background-color: #fff;
+
+        h3{
+            margin-bottom: 48px;
+            font-family: $font-family;
+            font-size: 36px;
+            font-weight: 600;
+            color: #000;
+        }
+
+        .cards-wrapper{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            
+
+            .card{
+                border-radius: 10px;
+                border: solid 1px #c2c2c2;
+                background-color: #fff;
+                
+                img{
+                    width: 275px;
+                    height: 420px;
+                }
+                div{
+                    padding: 16px;
+
+                    h4{
+                        margin-bottom: 40px;
+                        font-family: $font-family;
+                        font-size: 20px;
+                        font-weight: 500;
+                        color: #000;
+                    }
+
+                    p{
+                        margin-bottom: 22.5px;
+                        font-family: $font-family;
+                        font-size: 16px;
+                        font-weight: normal;
+                        color: #000;
+                    }
+
+                    div{
+                        padding: 0;
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        justify-content: space-between;
+
+                        span{
+                            font-family: $font-family;
+                            font-size: 16px;
+                            font-weight: normal;
+                            color: #000;
+                        }
+
+                        div{
+                            display: flex;
+                            flex-direction: row;
+                            align-items: center;
+                            gap: 5;
+
+                            img{
+                                width: 22px;
+                                height: 15px;
+                            }
+
+                            span{
+                                font-family: $font-family;
+                                font-size: 16px;
+                                font-weight: bold;
+                                color: #13297f;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
