--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -326,6 +326,7 @@
           border: 1px solid #c2c2c2;
           border-bottom-left-radius: 10px;
           border-bottom-right-radius: 10px;
+          color: #000000;
 
           h2 {
             font-size: 20px;
