--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -507,6 +507,7 @@ button {
   border: 1px solid #c2c2c2;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  color: #000000;
 }
 .main-content-wrapper .filter-books-wrapper .books-section .card .book-info h2 {
   font-size: 20px;
