--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -4,8 +4,9 @@ $font-family: 'FiraGO', sans-serif;
 
 // colors
 $header-background: #162974;
-$nav-element-color: #f5f5f5;
+$nav-element-active: #f5f5f5;
 $dark-blue-color: #022859;
+$nav-element-transparent: #f5f5f560;
 
 
 // resolution
