--- a/view/book-details.html
+++ b/view/book-details.html
@@ -24,7 +24,7 @@
           <div class="navigation">
             <nav>
               <ul>
-                <li><a href="#">წიგნები</a></li>
+                <li><a href="#">მთავარი</a></li>
                 <li><a href="#">პროექტის შესახებ</a></li>
               </ul>
             </nav>
