--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,5 +1,5 @@
 header {
-  height: 200px;
+  height: 96px;
   background-color: $header-background;
 
   @media (max-width: $desktop-large-screen) {
@@ -11,7 +11,7 @@ header {
   }
 
   @media (max-width: $mobile) {
-    height: 48px;
+    height: 90px;
   }
 
   .header_wrapper {
@@ -53,10 +53,10 @@ header {
 
           li {
             a {
-              /* font-family: */
-              font-weight: 800;
-              font-size: 28px;
-              line-height: 38.4px;
+              font-family: FiraGo500;
+              font-weight: 500;
+              font-size: 24px;
+              line-height: 1.2;
               color: $nav-element-color;
 
               @media (max-width: $desktop-large-screen) {
@@ -67,6 +67,10 @@ header {
                 font-size: 14px;
                 line-height: 16.3px;
               }
+            }
+
+            .active-header{
+                color: $nav-element-color-active;
             }
           }
         }
