--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -150,7 +150,7 @@ button {
 
 /* firago-latin-100-normal */
 @font-face {
-  font-family: "FiraGO";
+  font-family: "FiraGO100";
   font-style: normal;
   font-display: swap;
   font-weight: 100;
@@ -158,7 +158,7 @@ button {
 }
 /* firago-latin-200-normal */
 @font-face {
-  font-family: "FiraGO";
+  font-family: "FiraGO200";
   font-style: normal;
   font-display: swap;
   font-weight: 200;
@@ -166,7 +166,7 @@ button {
 }
 /* firago-latin-300-normal */
 @font-face {
-  font-family: "FiraGO";
+  font-family: "FiraGO300";
   font-style: normal;
   font-display: swap;
   font-weight: 300;
@@ -174,7 +174,7 @@ button {
 }
 /* firago-latin-400-normal */
 @font-face {
-  font-family: "FiraGO";
+  font-family: "FiraGO400";
   font-style: normal;
   font-display: swap;
   font-weight: 400;
@@ -182,7 +182,7 @@ button {
 }
 /* firago-latin-500-normal */
 @font-face {
-  font-family: "FiraGO";
+  font-family: "FiraGO500";
   font-style: normal;
   font-display: swap;
   font-weight: 500;
@@ -190,7 +190,7 @@ button {
 }
 /* firago-latin-600-normal */
 @font-face {
-  font-family: "FiraGO";
+  font-family: "FiraGO600";
   font-style: normal;
   font-display: swap;
   font-weight: 600;
@@ -198,7 +198,7 @@ button {
 }
 /* firago-latin-700-normal */
 @font-face {
-  font-family: "FiraGO";
+  font-family: "FiraGO700";
   font-style: normal;
   font-display: swap;
   font-weight: 700;
@@ -206,7 +206,7 @@ button {
 }
 /* firago-latin-800-normal */
 @font-face {
-  font-family: "FiraGO";
+  font-family: "FiraGO800";
   font-style: normal;
   font-display: swap;
   font-weight: 800;
@@ -214,7 +214,7 @@ button {
 }
 /* firago-latin-900-normal */
 @font-face {
-  font-family: "FiraGO";
+  font-family: "FiraGO900";
   font-style: normal;
   font-display: swap;
   font-weight: 900;
@@ -584,14 +584,12 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #162974;
-  opacity: 0.4;
   pointer-events: none;
 }
 
 header {
-  height: 200px;
-  background-color: #162974;
+  height: 96px;
+  background-color: #0077FF;
 }
 @media (max-width: 1200px) {
   header {
@@ -605,7 +603,7 @@ header {
 }
 @media (max-width: 480px) {
   header {
-    height: 48px;
+    height: 90px;
   }
 }
 header .header_wrapper {
@@ -650,11 +648,11 @@ header .header_wrapper .header_components .navigation nav ul {
   }
 }
 header .header_wrapper .header_components .navigation nav li a {
-  /* font-family: */
-  font-weight: 800;
-  font-size: 28px;
-  line-height: 38.4px;
-  color: #f5f5f5;
+  font-family: FiraGo500;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.2;
+  color: rgba(255, 255, 255, 0.3764705882);
 }
 @media (max-width: 1200px) {
   header .header_wrapper .header_components .navigation nav li a {
@@ -666,6 +664,9 @@ header .header_wrapper .header_components .navigation nav li a {
     font-size: 14px;
     line-height: 16.3px;
   }
+}
+header .header_wrapper .header_components .navigation nav li .active-header {
+  color: #FFFFFF;
 }
 @media (max-width: 600px) {
   header .header_wrapper .header_components .navigation {
@@ -695,7 +696,7 @@ header .header_wrapper .burger_menu .line {
 }
 
 .footer-main-info {
-  background-color: #162974;
+  background-color: #0077FF;
   color: white;
   font-size: 18px;
   font-weight: 700;
