--- a/styles/utils/_fonts.scss
+++ b/styles/utils/_fonts.scss
@@ -1,6 +1,6 @@
 /* firago-latin-100-normal */
 @font-face {
-    font-family: 'FiraGO';
+    font-family: 'FiraGO100';
     font-style: normal;
     font-display: swap;
     font-weight: 100;
@@ -9,7 +9,7 @@
   
   /* firago-latin-200-normal */
   @font-face {
-    font-family: 'FiraGO';
+    font-family: 'FiraGO200';
     font-style: normal;
     font-display: swap;
     font-weight: 200;
@@ -18,7 +18,7 @@
   
   /* firago-latin-300-normal */
   @font-face {
-    font-family: 'FiraGO';
+    font-family: 'FiraGO300';
     font-style: normal;
     font-display: swap;
     font-weight: 300;
@@ -27,7 +27,7 @@
   
   /* firago-latin-400-normal */
   @font-face {
-    font-family: 'FiraGO';
+    font-family: 'FiraGO400';
     font-style: normal;
     font-display: swap;
     font-weight: 400;
@@ -36,7 +36,7 @@
   
   /* firago-latin-500-normal */
   @font-face {
-    font-family: 'FiraGO';
+    font-family: 'FiraGO500';
     font-style: normal;
     font-display: swap;
     font-weight: 500;
@@ -45,7 +45,7 @@
   
   /* firago-latin-600-normal */
   @font-face {
-    font-family: 'FiraGO';
+    font-family: 'FiraGO600';
     font-style: normal;
     font-display: swap;
     font-weight: 600;
@@ -54,7 +54,7 @@
   
   /* firago-latin-700-normal */
   @font-face {
-    font-family: 'FiraGO';
+    font-family: 'FiraGO700';
     font-style: normal;
     font-display: swap;
     font-weight: 700;
@@ -63,7 +63,7 @@
   
   /* firago-latin-800-normal */
   @font-face {
-    font-family: 'FiraGO';
+    font-family: 'FiraGO800';
     font-style: normal;
     font-display: swap;
     font-weight: 800;
@@ -72,7 +72,7 @@
   
   /* firago-latin-900-normal */
   @font-face {
-    font-family: 'FiraGO';
+    font-family: 'FiraGO900';
     font-style: normal;
     font-display: swap;
     font-weight: 900;
