--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -6,6 +6,8 @@ $font-family: 'FiraGO', sans-serif;
 $header-background: #162974;
 $nav-element-color: #f5f5f5;
 $dark-blue-color: #022859;
+$body-background-color: #F5F5F5;
+$card-title: #333333;
 
 
 // resolution
