created-error-page
Based on header-redesign branch

--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -7,6 +7,9 @@ $header-background: #0077FF;
 $nav-element-color: #FFFFFF60;
 $nav-element-color-active: #FFFFFF;
 $dark-blue-color: #022859;
+$body-background-color: #F5F5F5;
+$error-page-h1: #022859;
+$error-page-p: #0468DC;
 
 
 // resolution
