--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -1021,4 +1021,30 @@ header .header_wrapper .burger_menu .line {
   font-size: 16px;
   font-weight: bold;
   color: #13297f;
+}
+
+body {
+  height: 100vh;
+  background-color: #F5F5F5;
+}
+
+main .error-message {
+  padding-top: 288px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  text-align: center;
+}
+main .error-message h1 {
+  color: #022859;
+  font-family: FiraGo700;
+  font-size: 3rem;
+}
+main .error-message p {
+  color: #0468DC;
+  font-family: FiraGo700;
+  font-size: 1.5rem;
+  text-decoration-line: underline;
+  -webkit-text-decoration-skip-ink: none;
+          text-decoration-skip-ink: none;
 }/*# sourceMappingURL=global.css.map */
