bugfix/main-container

--- a/view/error.html
+++ b/view/error.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main class="error-main-container">
       <section class="error-message">
         <h1>გვერდი ვერ მოიძებნა</h1>
         <a href="../index.html"><p>დაბრუნდი მთავარ გვერდზე</p></a>
