--- a/styles/components/_error.scss
+++ b/styles/components/_error.scss
@@ -2,7 +2,7 @@ body {
   background-color: $body-background-color;
 }
 
-main {
+.error-main-container {
   min-height: calc(100dvh - 96px);
   display: flex;
   justify-content: center;
