--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -970,24 +970,24 @@ body {
   background-color: #f5f5f5;
 }
 
-main {
+.error-main-container {
   min-height: calc(100dvh - 96px);
   display: flex;
   justify-content: center;
   align-items: center;
 }
-main .error-message {
+.error-main-container .error-message {
   display: flex;
   flex-direction: column;
   gap: 2rem;
   text-align: center;
 }
-main .error-message h1 {
+.error-main-container .error-message h1 {
   color: #022859;
   font-family: FiraGo700;
   font-size: 3rem;
 }
-main .error-message p {
+.error-main-container .error-message p {
   color: #0468dc;
   font-family: FiraGo700;
   font-size: 1.5rem;
