--- a/styles/components/_error.scss
+++ b/styles/components/_error.scss
@@ -14,13 +14,13 @@ body {
     text-align: center;
 
     h1 {
-      color: $error-page-h1;
+      color: $dark-blue-color;
       font-family: FiraGo700;
       font-size: 3rem;
     }
 
     p {
-      color: $error-page-p;
+      color: $link-color;
       font-family: FiraGo700;
       font-size: 1.5rem;
       text-decoration-line: underline;
