--- a/styles/components/_components.scss
+++ b/styles/components/_components.scss
@@ -268,12 +268,11 @@ body{
         margin: 0;
         border: 1px solid #33333360;
         border-radius: 10px;
+        overflow: hidden;
           
         .book-cover {
           width: 260px;
           height: 367px;
-          //border-radius: 10px;
-          border-radius: 10px;
         }
 
         .book-info{
@@ -306,8 +305,6 @@ body{
             justify-content: space-between;
             background-color: white;
             padding: 12px 12px 16px;
-            border-bottom-right-radius: 10px;
-            border-bottom-left-radius: 10px;
 
             h2{
               font-family: FiraGo600;
