--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -58,6 +58,11 @@ header {
               font-size: 24px;
               line-height: 1.2;
               color: $nav-element-color;
+              transition: color 0.5s;
+              
+              &:hover{
+                color: $nav-element-color-active;
+              }
 
               @media (max-width: $desktop-large-screen) {
                 font-size: 20px;
