--- a/styles/css/global.css
+++ b/styles/css/global.css
@@ -438,11 +438,11 @@ body {
   margin: 0;
   border: 1px solid rgba(51, 51, 51, 0.3764705882);
   border-radius: 10px;
+  overflow: hidden;
 }
 .main-content-wrapper .filter-books-wrapper .books-section .card .book-cover {
   width: 260px;
   height: 367px;
-  border-radius: 10px;
 }
 .main-content-wrapper .filter-books-wrapper .books-section .card .book-info {
   position: absolute;
@@ -471,8 +471,6 @@ body {
   justify-content: space-between;
   background-color: white;
   padding: 12px 12px 16px;
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
 }
 .main-content-wrapper .filter-books-wrapper .books-section .card .book-info .title-share h2 {
   font-family: FiraGo600;
@@ -596,6 +594,10 @@ header .header_wrapper .header_components .navigation nav li a {
   font-size: 24px;
   line-height: 1.2;
   color: rgba(255, 255, 255, 0.3764705882);
+  transition: color 0.5s;
+}
+header .header_wrapper .header_components .navigation nav li a:hover {
+  color: #ffffff;
 }
 @media (max-width: 1200px) {
   header .header_wrapper .header_components .navigation nav li a {
