--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -7,8 +7,7 @@ $nav-element-color: #ffffff60;
 $nav-element-color-active: #ffffff;
 $dark-blue-color: #022859;
 $body-background-color: #f5f5f5;
-$error-page-h1: #022859;
-$error-page-p: #0468dc;
+$link-color: #0468dc;
 $card-title: #333333;
 
 // resolution
